# fusion-hcm-mcp-server

./: .dockerignore  DESIGN.md  Dockerfile  NOTICE  README.md  SECURITY.md  config.example.toml  pyproject.toml
.github/workflows/: docker-publish.yml
docs/: INSTALL_CLAUDE_DESKTOP.md  TEST_CASES.md
src/aj_fusion_hcm_mcp/: __init__.py  __main__.py  config.py  context.py  server.py
src/aj_fusion_hcm_mcp/auth/: __init__.py  base.py  basic.py  oauth2.py
src/aj_fusion_hcm_mcp/core/: __init__.py  catalog.py  client.py  errors.py  filters.py
src/aj_fusion_hcm_mcp/data/: __init__.py  seed_catalog.json
src/aj_fusion_hcm_mcp/safety/: __init__.py  audit.py  redaction.py
src/aj_fusion_hcm_mcp/tools/: __init__.py  atom.py  discovery.py  query.py  workflows.py  writes.py
tests/: __init__.py  conftest.py  test_atom.py  test_auth.py  test_catalog.py  test_client_safety.py  test_config.py  test_filters.py  test_redaction.py  test_workflows.py  test_writes.py
