[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aj-fusion-hcm-mcp"
version = "0.1.0"
description = "MCP server for Oracle Fusion Cloud HCM — generic, capability-aware, safe-by-default."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Ajitesh Mohanty", email = "mohantyajitesh@gmail.com" }]
keywords = ["mcp", "oracle", "fusion", "hcm", "model-context-protocol"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "mcp>=1.2.0",
  "httpx>=0.27",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
  "build>=1.2",
]

[project.scripts]
aj-fusion-hcm-mcp = "aj_fusion_hcm_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aj_fusion_hcm_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
